[package]
name = "gtk-open-folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-channel = { version = "2.2.1" }
tokio = { version = "1", features = ["full"] }
percentage = "0.1.0"

[build-dependencies]
glib-build-tools = "0.19.0"
